fix gaps in Portfolio for tablet

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -781,12 +781,12 @@ img {
 @media screen and (min-width: 768px) {
   .portfolio-list {
     flex-direction: row;
-    gap: 24px;
+    column-gap: 24px;
+    row-gap: 72px;
   }
 
   .portfolio-item {
     width: calc((100% - 24px) / 2);
-    margin-bottom: 72px;
   }
 
   .portfolio-item:last-child {
